css e js: aggiunta stile

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="serie">
+    <div id="serie" class="m-5">
         
     </div>
     <script src="js/script.js" ></script>
